--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,16 @@
 spring.application.name=croco-backend
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:8889/croco_store
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=00000001
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
 
-
-spring.security.oauth2.client.registration.github.client-id=Ov23lipV6OiX0iylE3Pl
-spring.security.oauth2.client.registration.github.client-secret=17378761c8b5ed8ef39ec92be67381e419206ef7
-spring.security.oauth2.client.registration.github.scope=user:email
-spring.security.oauth2.client.registration.google.client-id=364097064919-hf1hrnkbiae5phbn8v2if9sm4a7t4bpf.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
-logging.level.org.springframework.security=TRACE
